--- a/Doctors/src/main/resources/application-dev.properties
+++ b/Doctors/src/main/resources/application-dev.properties
@@ -1,9 +1,8 @@
-
 spring.main.banner-mode=off
 logging.level.org.springframework=ERROR
 
-spring.datasource.url=jdbc:mysql://10.0.0.47:3306/doctors?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://10.0.0.240:3306/doctors?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=*Mayra1991
-spring.jpa.show-sql=true
+spring.datasource.password=*Oscar1973
+spring.jpa.show-sql= true
 server.port=8080
