--- a/Doctors/src/main/resources/application.properties
+++ b/Doctors/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-
 spring.main.banner-mode=off
 logging.level.org.springframework=ERROR
 
-spring.datasource.url=jdbc:mysql://Localhost:3306/doctors?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/doctors?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Flowers21+
-spring.jpa.show-sql=true
+spring.datasource.password=osmawil73
+spring.jpa.show-sql= true
